--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Alvaro Gonzalez
+    Date: 11/20/18
     Filename: index.html
    -->    
     
